--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
-body {
-    color: purple;
-    font-size: large;
+h1 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-li {
-    font-size: small;
+h2 {
+    font-family: 'Courier New', Courier, monospace;
 }
