--- a/style.css
+++ b/style.css
@@ -1,7 +1,26 @@
-h1 {
+body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding-top: 25px;
+    padding-left: 100px;
+    padding-right: 200px;
+    padding-bottom: 50px;
 }
 
-h2 {
-    font-family: 'Courier New', Courier, monospace;
+p {
+    font-size: large;
+    line-height: 1.5;
+}
+
+li {
+    font-size: large;
+    line-height: 1.5;
+    margin-bottom: 4px;
+}
+
+h3 {
+    font-size:x-large;
+}
+
+h4 {
+    font-size: large;
 }
